k8s/deployment-outside-policy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  labels:
    app: outside-policy
  name: outside-policy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: outside-policy
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: outside-policy
    spec:
      containers:
      - image: tienmanh294/mmv3-currency-conversion-service:0.0.11-SNAPSHOT
        imagePullPolicy: IfNotPresent
        name: mmv2-outside-policy-service
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: outside-policy
  name: outside-policy
spec:
  ports:
  - port: 8101
    protocol: TCP
    targetPort: 8101
  selector:
    app: outside-policy
  sessionAffinity: None
  type: LoadBalancer
