k8s/network.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: network-policy
spec:
  podSelector:
    matchLabels:
      app: currency-exchange
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: currency-conversion
    ports:
    - protocol: TCP
      port: 8000
